# backend

./: .gitignore  pyproject.toml
app/core/: config.py  security.py
app/db/: base.py  session.py
app/modules/users/: model.py  repository.py  router.py  schema.py  service.py
app/shared/models/: base.py
