[project]
name = "my-api"
version = "0.1.0"
description = "FastAPI modular monolith backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "PyJWT>=2.8.0",
  "passlib[bcrypt]>=1.7.4",
  "slowapi>=0.1.9",
  "email-validator>=2.0.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=3.4.4",
  "fastapi-mail"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.8",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
